Updated AuthZ policy rule playbook to accommodate recent SDK update

--- a/create_authorizationpolicyrule.yaml
+++ b/create_authorizationpolicyrule.yaml
@@ -25,7 +25,7 @@
 
     - name: Set policyId  # set a policyid variable with the id from the default policy set
       set_fact:
-        policyid: "{{ allsets.ise_response.response | map(attribute='id') }}"
+        policyid: "{{ allsets.ise_response | map(attribute='id') }}"
 
     - name: Get all Network Access Authentication Rules
       cisco.ise.network_access_authentication_rules_info:
