Updated AuthZ policy rule with proper group name condition

--- a/create_authorizationpolicyrule.yaml
+++ b/create_authorizationpolicyrule.yaml
@@ -47,7 +47,7 @@
             dictionaryName: IdentityGroup
             attributeName: Name
             operator: equals
-            attributeValue: Employees
+            attributeValue: Employee
           name: User_VLAN_Access_Rule  # name our authz policy appropriately
         profile:
           - User_VLAN_Access  # assign the User_VLAN_Access authz profile
